--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
     "name": "TreeSnap",
-    "version": "1.1.3",
-    "buildNum": "1040",
+    "version": "1.2.0",
+    "buildNum": "1050",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
         "test": "jest",
-        "postinstall": "rm ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
+        "postinstall": "./post-install.sh"
     },
     "dependencies": {
         "axios": "^0.17.1",
         "camelcase": "^4.1.0",
-        "moment": "^2.20.1",
-        "prop-types": "^15.6.0",
+        "moment": "^2.21.0",
+        "prop-types": "^15.6.1",
         "react": "16.2.0",
         "react-native": "0.53.3",
-        "react-native-camera": "^0.13.0",
+        "react-native-camera": "~1.0.1",
         "react-native-fetch-blob": "^0.10.8",
         "react-native-image-pan-zoom": "^2.0.16",
         "react-native-image-resizer": "~1.0.0",
         "react-native-image-slider": "^1.1.5",
         "react-native-iphone-x-helper": "^1.0.2",
-        "react-native-keyboard-aware-scroll-view": "^0.4.3",
+        "react-native-keyboard-aware-scroll-view": "^0.4.4",
         "react-native-maps": "^0.17.1",
         "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
         "react-native-tab-view": "0.0.65",
         "react-native-vector-icons": "^4.5.0",
-        "react-navigation": "^1.0.0-beta.27",
-        "realm": "^2.2.4",
-        "tcomb": "^3.2.24",
+        "react-navigation": "^1.3.2",
+        "realm": "^2.2.13",
+        "tcomb": "^3.2.25",
         "tcomb-validation": "^3.4.1"
     },
     "devDependencies": {
