--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-photo-view')
     implementation project(':realm')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-material-kit')
