--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "react-native": "0.53.3",
     "react-native-camera": "github:react-native-community/react-native-camera#master",
     "react-native-fetch-blob": "^0.10.8",
-    "react-native-image-pan-zoom": "^2.0.16",
+    "react-native-image-pan-zoom": "^2.0.17",
     "react-native-image-resizer": "~1.0.0",
     "react-native-image-slider": "^1.1.5",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-maps": "^0.17.1",
     "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
+    "react-native-photo-view": "github:alwx/react-native-photo-view#master",
     "react-native-tab-view": "0.0.65",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.4.0",
-    "realm": "^2.2.14",
+    "react-navigation": "^1.5.6",
+    "realm": "^2.3.0",
     "tcomb": "^3.2.25",
     "tcomb-validation": "^3.4.1"
   },
