--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.treesnap">
+          package="com.treesource">
 
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -17,7 +17,7 @@
       android:targetSdkVersion="26"/>
 
   <application
-      android:name=".MainApplication"
+      android:name="com.treesource.MainApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
@@ -26,7 +26,7 @@
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyDwCwo9N7qFEzCUb7Z291JYR2niyoNj-QY"/>
     <activity
-        android:name=".MainActivity"
+        android:name="com.treesource.MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:windowSoftInputMode="adjustPan">
