--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,8 +111,8 @@ android {
         applicationId "com.treesource"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1052
-        versionName "1.2.1"
+        versionCode 1060
+        versionName "1.3.0"
         multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -190,6 +190,7 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics:$googlePlayServicesVersion") {
         force = true
     }
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 // Run this once to be able to run the application with BUCK
