--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,11 +9,13 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://maven.fabric.io/public' }
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'io.fabric.tools:gradle:1.25.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,6 +30,7 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com/' }
         google()
     }
 }
