--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,8 @@ target 'TreeSnap' do
   # use_frameworks!
   
   pod 'Firebase/Core', '4.2.0'
+  pod 'Fabric', '~> 1.7.7'
+  pod 'Crashlytics', '~> 3.10.2'
 end
 
 post_install do |installer|
