--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,8 +112,8 @@ android {
         applicationId "com.treesource"
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 1060
-        versionName "1.3.0"
+        versionCode 1070
+        versionName "1.4.0"
         multiDexEnabled true
         ndk {
             abiFilters "armeabi-v7a", "x86"
@@ -175,9 +175,7 @@ dependencies {
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.gms:google-services:3.3.1'
-    implementation("com.google.android.gms:play-services-vision:$googlePlayServicesVersion") {
-        force = true
-    }
+    implementation "com.google.android.gms:play-services-vision:$googlePlayServicesVersion"
     implementation("com.android.support:appcompat-v7:$supportLibVersion") {
         force = true
     }
@@ -192,7 +190,9 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics:$googlePlayServicesVersion") {
         force = true
     }
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4') {
+        force = true
+    }
     implementation 'com.android.support:multidex:1.0.3'
 }
 
