--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,7 @@
 **/
 
 buildscript {
+    ext.firebaseVersion = '11.8.0'
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
@@ -13,8 +14,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.gms:google-services:3.2.1'
         classpath 'io.fabric.tools:gradle:1.25.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -30,7 +31,18 @@ allprojects {
             url "$rootDir/../node_modules/react-native/android"
         }
         maven { url "https://jitpack.io" }
-        maven { url 'https://maven.google.com/' }
         google()
+        maven { url 'https://maven.google.com/' }
+    }
+
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.google.android.gms'
+                        && !details.requested.name.contains('multidex') ) {
+                    details.useVersion "11.8.0"
+                }
+            }
+        }
     }
 }
