--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-addons-update": "^15.6.2",
     "react-native": "0.55.4",
     "react-native-camera": "github:react-native-community/react-native-camera#master",
+    "react-native-device-info": "^0.21.5",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^3.3.1",
     "react-native-image-pan-zoom": "^2.1.6",
