--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
     compile(project(':react-native-firebase')) {
         transitive = false
     }
+    compile project(':react-native-device-info')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-camera')
     compile project(':react-native-device-info')
