--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,12 +106,12 @@ android {
             }
         }
     }
-    compileSdkVersion 26
-    //buildToolsVersion '26.0.2'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    //buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "com.treesource"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1070
         versionName "1.4.0"
         multiDexEnabled true
@@ -175,13 +175,11 @@ dependencies {
         exclude group: 'com.android.support'
         exclude group: 'com.google.android.gms'
     }
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.gms:google-services:3.3.1'
     implementation "com.google.android.gms:play-services-vision:$googlePlayServicesVersion"
-    implementation("com.android.support:appcompat-v7:$supportLibVersion") {
-        force = true
-    }
-    implementation 'com.facebook.react:react-native:0.55.4'
+//    implementation("com.android.support:appcompat-v7:$supportLibVersion") {
+//        force = true
+//    }
     implementation "com.google.android.gms:play-services-maps:$googlePlayServicesVersion"
     implementation("com.android.support:exifinterface:$supportLibVersion") {
         force = true
@@ -196,6 +194,9 @@ dependencies {
         force = true
     }
     implementation 'com.android.support:multidex:1.0.3'
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
