--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "geolib": "^2.0.24",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
+    "react": "16.4.1",
     "react-addons-update": "^15.6.2",
-    "react-native": "0.55.4",
+    "react-native": "0.56.0",
     "react-native-camera": "github:react-native-community/react-native-camera#master",
     "react-native-device-info": "^0.21.5",
     "react-native-fetch-blob": "^0.10.8",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
+    "babel-preset-react-native": "^5.0.2",
     "extract-zip": "^1.6.7",
     "jest": "18.1.0",
     "react-test-renderer": "~16.2.0"
