--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.4.4",
     "react-native-maps": "^0.20.0",
     "react-native-material-kit": "github:xinthink/react-native-material-kit#master",
+    "react-native-permissions": "^1.1.1",
     "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
     "react-native-push-notification": "github:statonlab/react-native-push-notification#master",
     "react-native-tab-view": "0.0.65",
