--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,6 @@
 **/
 
 buildscript {
-    ext.firebaseVersion = '11.8.0'
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
@@ -54,4 +53,5 @@ ext {
     compileSdkVersion = 26
     targetSdkVersion = 26
     supportLibVersion = "26.1.0"
+    firebaseVersion = '11.8.0'
 }
