--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,8 +18,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
-#android.enableAapt2=false
 #android.threadPool=4
-
+android.enableAapt2 = false
 supportLibVersion=26.1.0
 googlePlayServicesVersion=11.8.0
