--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
     "presets": [
         "react-native"
-    ]
-//    "env": {
-//        "production": {
-//            "plugins": [
-//                "transform-remove-console"
-//            ]
-//        }
-//    }
+    ],
+    "env": {
+        "production": {
+            "plugins": [
+                "transform-remove-console"
+            ]
+        }
+    }
 }
