--- a/ios/Treesnap/Info.plist
+++ b/ios/Treesnap/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>edu.utk.treesource</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>treesnap</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -47,7 +58,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access is needed to pictures of observations</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location services are needed to collect each observation's location</string>
+	<string>Location services are needed to collect each observation&apos;s location</string>
 	<key>NSMainNibFile</key>
 	<string>LaunchScreen</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
