--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "TreeSnap",
-    "version": "1.4.1",
-    "buildNum": "1072",
+    "version": "1.4.2",
+    "buildNum": "1074",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -40,12 +40,12 @@
         "tcomb-validation": "^3.4.1"
     },
     "devDependencies": {
-        "@babel/core": "~7.0.0-beta.54",
-        "babel-jest": "~23.4.0",
+        "@babel/core": "~7.0.0-beta.56",
+        "babel-jest": "^23.4.2",
         "babel-preset-react-native": "^5.0.2",
         "extract-zip": "^1.6.7",
-        "jest": "~23.4.1",
-        "react-test-renderer": "~16.4.1"
+        "jest": "^23.4.2",
+        "react-test-renderer": "^16.4.2"
     },
     "jest": {
         "preset": "react-native",
