--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,14 +6,22 @@
 **/
 
 buildscript {
+    ext {
+        buildToolsVersion = "27.0.3"
+        minSdkVersion = 16
+        compileSdkVersion = 27
+        targetSdkVersion = 26
+        supportLibVersion = "27.1.1"
+    }
     repositories {
+        google()
         jcenter()
         maven { url 'https://maven.google.com' }
         maven { url 'https://maven.fabric.io/public' }
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath 'com.google.gms:google-services:3.2.1'
         classpath 'io.fabric.tools:gradle:1.25.4'
 
@@ -25,6 +33,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -54,4 +63,9 @@ ext {
     targetSdkVersion = 26
     supportLibVersion = "26.1.0"
     firebaseVersion = '11.8.0'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
