--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
-        "test": "jest",
+        "test": "jest --watchAll",
         "postinstall": "./post-install.sh"
     },
     "dependencies": {
