--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-native-keyboard-aware-scroll-view": "^0.4.4",
         "react-native-localize": "^1.0.1",
         "react-native-maps": "^0.23.0",
+        "react-native-material-kit": "^0.5.1",
         "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
         "react-native-progress": "^3.5.0",
         "react-native-push-notification": "github:statonlab/react-native-push-notification#master",
