--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "TreeSnap",
-    "version": "1.9.0",
-    "buildNum": "1500",
+    "version": "1.9.1",
+    "buildNum": "1501",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -17,7 +17,7 @@
         "geolib": "^2.0.24",
         "i18n-js": "^3.2.1",
         "moment": "^2.24.0",
-        "prop-types": "^15.6.2",
+        "prop-types": "^15.7.2",
         "react": "16.6.3",
         "react-addons-update": "^15.6.2",
         "react-native": "0.57.8",
@@ -26,11 +26,11 @@
         "react-native-firebase": "^4.3.8",
         "react-native-i18n": "^2.0.15",
         "react-native-image-pan-zoom": "^2.1.11",
-        "react-native-image-resizer": "~1.0.0",
+        "react-native-image-resizer": "^1.0.1",
         "react-native-image-slider": "^1.1.5",
         "react-native-iphone-x-helper": "^1.2.0",
         "react-native-keyboard-aware-scroll-view": "^0.4.4",
-        "react-native-localize": "^1.0.1",
+        "react-native-localize": "^1.1.1",
         "react-native-maps": "^0.23.0",
         "react-native-material-kit": "^0.5.1",
         "react-native-photo-view": "github:statonlab/react-native-photo-view#master",
@@ -38,17 +38,17 @@
         "react-native-push-notification": "github:statonlab/react-native-push-notification#master",
         "react-native-vector-icons": "^4.6.0",
         "react-navigation": "^2.18.3",
-        "realm": "^2.22.0",
+        "realm": "^2.26.0",
         "rn-fetch-blob": "github:joltup/rn-fetch-blob#v0.10.13",
         "tcomb": "^3.2.29",
         "tcomb-validation": "^3.4.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.0",
+        "@babel/core": "^7.4.3",
         "babel-jest": "^23.6.0",
         "extract-zip": "^1.6.7",
         "jest": "^23.6.0",
-        "react-test-renderer": "^16.8.5"
+        "react-test-renderer": "^16.8.6"
     },
     "jest": {
         "preset": "react-native",
