--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,7 +18,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # org.gradle.parallel=true
 android.useDeprecatedNdk=true
 #android.threadPool=4
-android.enableAapt2 = false
+android.enableAapt2 = true
 supportLibVersion=26.1.0
 googlePlayServicesVersion=15.0.0
 
