--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@react-native-community/async-storage": "^1.3.3",
         "@react-native-community/netinfo": "^2.0.5",
-        "axios": "^0.18.0",
+        "axios": "^0.19.0",
         "babel-plugin-transform-remove-console": "^6.9.4",
         "babel-preset-react-native": "^4.0.1",
         "camelcase": "^4.1.0",
@@ -42,11 +42,11 @@
     "devDependencies": {
         "@babel/core": "^7.4.3",
         "@babel/runtime": "^7.4.3",
-        "extract-zip": "^1.6.7",
-        "react-test-renderer": "^16.8.6",
         "babel-jest": "^24.7.1",
+        "extract-zip": "^1.6.7",
         "jest": "^24.7.1",
-        "metro-react-native-babel-preset": "^0.53.1"
+        "metro-react-native-babel-preset": "^0.53.1",
+        "react-test-renderer": "^16.8.6"
     },
     "jest": {
         "preset": "react-native",
