--- a/ios/TreeSnap/Info.plist
+++ b/ios/TreeSnap/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.11.1</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -32,7 +32,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1701</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
@@ -60,6 +60,8 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Location services are needed to collect observation's GPS location</string>
 	<key>NSLocationUsageDescription</key>
+	<string>Location services are needed to collect each observation's location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Location services are needed to collect each observation's location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location services are needed to collect each observation's location</string>
