--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,12 +117,12 @@ android {
         applicationId "com.treesource"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1800
+        versionCode 1802
         versionName "1.12.0"
         missingDimensionStrategy 'react-native-camera', 'general'
         multiDexEnabled true
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
     }
     splits {
@@ -183,16 +183,16 @@ dependencies {
         force = true
     }
 
-    implementation "com.google.android.gms:play-services-base:17.0.0"
+    implementation "com.google.android.gms:play-services-base:17.1.0"
     implementation "com.google.android.gms:play-services-appinvite:18.0.0"
-    implementation "com.google.firebase:firebase-core:17.0.0"
-    implementation "com.google.firebase:firebase-analytics:17.0.0"
+    implementation "com.google.firebase:firebase-core:17.2.0"
+    implementation "com.google.firebase:firebase-analytics:17.2.0"
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
